src/test/ui/regions/regions-assoc-type-region-bound-in-trait-not-met.stderr
error[E0477]: the type `&'a i32` does not fulfill the required lifetime
  --> $DIR/regions-assoc-type-region-bound-in-trait-not-met.rs:15:5
   |
LL |     type Value = &'a i32;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
note: type must satisfy the static lifetime as required by this binding
  --> $DIR/regions-assoc-type-region-bound-in-trait-not-met.rs:5:17
   |
LL |     type Value: 'a;
   |                 ^^

error[E0477]: the type `&'a i32` does not fulfill the required lifetime
  --> $DIR/regions-assoc-type-region-bound-in-trait-not-met.rs:20:5
   |
LL |     type Value = &'a i32;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
note: type must outlive the lifetime `'b` as defined here as required by this binding
  --> $DIR/regions-assoc-type-region-bound-in-trait-not-met.rs:19:10
   |
LL | impl<'a, 'b> Foo<'b> for &'a i64 {
   |          ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0477`.
